--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,22 +8,28 @@
     android:paddingRight="16dp"
     android:orientation="vertical">
 
+
+
     <ImageView
-        android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/ic_smartscale"
         tools:ignore="VectorDrawableCompat" />
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/username_login"
+        app:backgroundTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/username"/>
-    <EditText
+        android:hint="@string/username"
+        android:maxLines="1"/>
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/password_login"
+        app:backgroundTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"/>
+        android:hint="@string/password"
+        android:maxLines="1"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
