--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,13 @@
     android:paddingRight="16dp"
     android:orientation="vertical">
 
-
-
     <ImageView
         android:layout_width="230dp"
         android:layout_height="230dp"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/ic_smartscale"
         tools:ignore="VectorDrawableCompat" />
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/username_login"
         app:backgroundTint="@color/colorAccent"
@@ -23,6 +22,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/username"
         android:maxLines="1"/>
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/password_login"
         app:backgroundTint="@color/colorAccent"
@@ -30,9 +30,22 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:maxLines="1"/>
-    <Button
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:layout_gravity="left"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:layout_gravity="left"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:layout_gravity="right"/>
+
+    </LinearLayout>
 </LinearLayout>
